# AERNOMOS

./: .gitignore  AGENTS.md  README.md  SOUL.md  pyproject.toml
orbital-cortex/sdk/python/: README.md  pyproject.toml
orbital-cortex/sdk/python/examples/: plan_mission.py  submit_ship_detection.py
orbital-cortex/sdk/python/orbitalcortex/: __init__.py  _retry.py  async_client.py  client.py  exceptions.py  jobs.py  missions.py  nodes.py  registry.py  routing.py  transport.py  types.py
orbital-cortex/sdk/python/orbitalcortex_api/: __init__.py
orbital-cortex/sdk/python/orbitalcortex_api/api/artifacts/: get_artifact_v1_artifacts_key_get.py
orbital-cortex/sdk/python/orbitalcortex_api/api/health/: healthz_healthz_get.py  readyz_readyz_get.py
orbital-cortex/sdk/python/orbitalcortex_api/api/jobs/: create_job_v1_jobs_post.py  get_job_detections_v1_jobs_job_id_detections_get.py  get_job_events_v1_jobs_job_id_events_get.py  get_job_scene_v1_jobs_job_id_scene_get.py  get_job_v1_jobs_job_id_get.py  list_jobs_v1_jobs_get.py  simulate_run_v1_simulate_run_job_id_post.py
orbital-cortex/sdk/python/orbitalcortex_api/api/leads/: submit_design_partner_request_v1_design_partner_requests_post.py  submit_mission_feedback_v1_missions_mission_id_feedback_post.py
orbital-cortex/sdk/python/orbitalcortex_api/api/missions/: create_mission_v1_missions_post.py  create_pdf_export_v1_missions_mission_id_exports_pdf_post.py  create_share_link_v1_missions_mission_id_share_links_post.py  discover_mission_catalog_v1_missions_mission_id_discover_post.py  execute_plan_step_v1_missions_mission_id_plans_plan_id_execute_post.py  export_mission_json_v1_missions_mission_id_exports_json_get.py  generate_mission_plans_v1_missions_mission_id_plans_post.py  get_execution_status_v1_missions_mission_id_plans_plan_id_execute_external_job_id_get.py  get_latest_pdf_export_v1_missions_mission_id_exports_pdf_get.py  (+11 more)
orbital-cortex/sdk/python/orbitalcortex_api/models/: __init__.py  anonymous_session_out.py  area_of_interest.py  artifact_ref.py  candidate_score.py  candidate_score_weights.py  catalog_candidate_asset_out.py  catalog_candidate_out.py  catalog_candidate_out_asset_metadata.py  catalog_candidate_out_footprint.py  catalog_candidates_response.py  compute_node.py  compute_node_type.py  contact_window.py  contact_windows_response.py  design_partner_request.py  design_partner_request_response.py  discover_request.py  error_detail.py  error_response.py  execute_step_request.py  execute_step_request_params.py  execution_estimate.py  execution_result.py  execution_status_response.py  external_job_status.py  external_job_status_status.py  feedback_rating.py  ground_station.py  ground_station_source_metadata.py  ground_stations_response.py  hard_constraint_failure.py  healthz_healthz_get_response_healthz_healthz_get.py  http_validation_error.py  job.py  job_compute_preference.py  job_create.py  job_create_compute_preference.py  job_create_job_type.py  job_create_priority.py  (+69 more)
orbital-cortex/sdk/python/tests/: test_resilience.py  test_sdk.py
(+367 files in other folders)
