[project]
name = "nomos-orbital"
version = "0.1.0"
description = "Nomos Orbital MVS skeleton — SDK, router, and pluggable node interface for orbital compute jobs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
