[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitalcortex"
version = "0.1.0"
description = "Python SDK for the Orbital Cortex simulated orbital compute control plane."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Orbital Cortex" }
]
license = { text = "MIT" }
keywords = ["orbital-compute", "satellite", "simulation", "fastapi", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]

[project.urls]
Documentation = "https://example.invalid/orbital-cortex/docs"
Repository = "https://example.invalid/orbital-cortex"

[tool.setuptools.packages.find]
include = ["orbitalcortex*"]

[tool.setuptools.package-data]
orbitalcortex = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
